--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,35 @@
   }
 }
 
+p {
+  margin: .5rem 0;
+  line-height: 1.6rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
   text-align: center;
   font-weight: bold;
+}
+
+h1 {
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 1.4rem;
+  margin: .5rem 0;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+ol {
+  margin-left: 48px;
+  margin-top: 1rem;
+}
+
+ul {
+  margin-left: 48px;
 }
